dex-k8s-authenticator/dex-k8s-authenticator-helm.yaml
---
# Source: dex-k8s-authenticator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-k8s-authenticator
  labels:
    app: dex-k8s-authenticator
    env: dev
    chart: dex-k8s-authenticator-1.2.0
    release: RELEASE-NAME
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - port: 5555
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: dex-k8s-authenticator
    release: RELEASE-NAME
---
# Source: dex-k8s-authenticator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-k8s-authenticator
  labels:
    app: dex-k8s-authenticator
    env: dev
    chart: dex-k8s-authenticator-1.2.0
    release: RELEASE-NAME
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex-k8s-authenticator
      env: dev
      release: RELEASE-NAME
  template:
    metadata:
      labels:
        app: dex-k8s-authenticator
        env: dev
        release: RELEASE-NAME
      annotations:
        checksum/config: a411eb94d21b560b92537e464c1bf596c815ac15a72a4423f46aaceab41da6d7
    spec:
      containers:
      - name: dex-k8s-authenticator
        image: "mintel/dex-k8s-authenticator:1.2.0"
        imagePullPolicy: Always
        args: [ "--config", "config.yaml" ]
        ports:
        - name: http
          containerPort: 5555
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        volumeMounts:
        - name: config
          subPath: config.yaml
          mountPath: /app/config.yaml
        resources:
          {}
      volumes:
      - name: config
        configMap:
          name: dex-k8s-authenticator
