dex-k8s-authenticator/service.yaml
# Source: dex-k8s-authenticator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-k8s-authenticator
spec:
  type: ClusterIP
  ports:
  - port: 5555
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: dex-k8s-authenticator
